[package]
name = "csv-to-json-array-map-with-timestamp"
version = "0.1.0"
authors = ["Alexander Mikhalev <alex@metacortex.engineer>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
chrono = { version = "0.4.26", default-features = false,features = ["clock"] }
csv = "1.2.2"
fluvio-smartmodule = "0.7.0"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
